# limen

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: limen.yaml
data/: shared_memory.json  tasks.json
docs/: architecture.md  guide_utilisation.md  philosophie_limen.md  related_work.md
eval/: benchmark.py  metrics.py
limen/: __init__.py
limen/agents/: __init__.py  assessor.py  base_agent.py  critic.py  generator.py  synthesizer.py
limen/core/: __init__.py  competence_estimator.py  decision_engine.py  factory.py  orchestrator.py  prompts.py  schemas.py
limen/memory/: __init__.py  shared_memory.py
limen/providers/: __init__.py  base.py  mock_provider.py  ollama_provider.py  openai_provider.py
limen/utils/: __init__.py  json_utils.py
tests/: test_decision_engine.py  test_json_utils.py  test_orchestrator.py
